--- a/src/assets/styles/base/_base.styl
+++ b/src/assets/styles/base/_base.styl
@@ -94,7 +94,7 @@ a {
 }
 
 p {
-  // letter-spacing: letterSpacing(base);
+  letter-spacing: letterSpacing(base);
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
 }
@@ -120,14 +120,5 @@ body, html {
   height: 100%;
   overflow: hidden;
   z-index: 0;
-}
-
-#__layout, #__nuxt {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 }
 
