fix custom media /add sanitize.css

--- a/src/assets/styles/base/_base.styl
+++ b/src/assets/styles/base/_base.styl
@@ -8,30 +8,30 @@
   box-sizing: inherit;
 }
 
-html {
+html
   box-sizing: border-box;
   font-size: 62.5%;
   -webkit-tap-highlight-color: transparent;
 
-  @media (--isXXSmall) {
-    font-size: 56.3%;
-  }
-  @media (--isSmall) {
-    font-size: 75%;
-  }
-  @media (--isMedium) {
-    font-size: 87.5%;
-  }
-  @media (--isLargeS) {
-    font-size: 43.8%;
-  }
-  @media (--isLargeM) {
-    font-size: 50%;
-  }
-  @media (--isLargeL) {
-    font-size: 56.3%;
-  }
-}
+  @media (--isXXSmall)
+    font-size: 56.3%
+
+  @media (--isSmall)
+    font-size: 75%
+
+  @media (--isMedium)
+    font-size: 87.5%
+
+  @media (--isLargeS)
+    font-size: 43.8%
+
+  @media (--isLargeM)
+    font-size: 50%
+
+  @media (--isLargeL)
+    font-size: 56.3%
+
+
 
 body {
   color: $base-color;
