--- a/src/assets/styles/main.styl
+++ b/src/assets/styles/main.styl
@@ -3,3 +3,6 @@
 @import "./base/*";
 
 @import "./utils/_utils";
+@import "./utils/_width";
+@import "./utils/_spacing";
+@import "./utils/_border";
