add base script

--- a/src/_include/_base.pug
+++ b/src/_include/_base.pug
@@ -3,4 +3,6 @@ include ./mixin/_index.pug
 block vars
   - var id = ""
 
-block content
+block wrapper
+  .l-content(data-template=id)
+    block content
