--- a/src/assets/styles/main.styl
+++ b/src/assets/styles/main.styl
@@ -1,8 +1,5 @@
-@import "./settings";
+@import "./settings"
 
-@import "./base/*";
+@import "./base/*"
 
-@import "./utils/_utils";
-@import "./utils/_width";
-@import "./utils/_spacing";
-@import "./utils/_border";
+@import "./utils/*"
