--- a/src/assets/styles/base/_keyframes.styl
+++ b/src/assets/styles/base/_keyframes.styl
@@ -2,12 +2,12 @@
   0% {
     transform: scaleX(1);
     transform-origin: right top;
-    animation-timing-function: $easeInQuart;
+    animation-timing-function: easeInQuart;
   }
   33.3% {
     transform: scaleX(0);
     transform-origin: right top;
-    animation-timing-function: $easeOutQuart;
+    animation-timing-function: easeOutQuart;
   }
   33.4% {
     transform-origin: left top;
@@ -19,16 +19,16 @@
 }
 
 
-@keyframes scrollDown {
+@keyframes lineDown {
   0% {
     transform: scaleY(1);
     transform-origin: 50% 100% 0;
-    animation-timing-function: $easeInQuart;
+    animation-timing-function: easeInQuart;
   }
   33.3% {
     transform: scaleY(0);
     transform-origin: 50% 100% 0;
-    animation-timing-function: $easeOutQuart;
+    animation-timing-function: easeOutQuart;
   }
   33.4% {
     transform-origin: 50% 0 0;
@@ -39,16 +39,16 @@
   }
 }
 
-@keyframes scrollUp {
+@keyframes lineUp {
   0% {
     transform: scaleY(1);
     transform-origin: 50% 0 0;
-    animation-timing-function: $easeInQuart;
+    animation-timing-function: easeInQuart;
   }
   33.3% {
     transform: scaleY(0);
     transform-origin: 50% 0 0;
-    animation-timing-function: $easeOutQuart;
+    animation-timing-function: easeOutQuart;
   }
   33.4% {
     transform-origin: 50% 100% 0;
